[package]
name = "bitwrap_extra"
version = "2.0.1"
authors = ["Cesbo Developers Team", "mengyou658"]
categories = [
    "data-structures",
    "embedded",
    "no-std",
]
description = "pack/unpack data into byte array"
documentation = "https://docs.rs/bitwrap_extra"
repository = "https://github.com/mengyou658/bitwrap"
edition = "2018"
keywords = [
    "bit",
    "bitfield",
    "parser",
    "protocol",
    "lsb"
]
license = "MIT"
readme = "README.md"

[features]
std = []
default = [
    "std",
]

[workspace]
members = [".", "bitwrap_derive"]

[dependencies]
bitwrap_derive_extra = { path = "./bitwrap_derive", version = "2.0.0" }
