[package]
name = "bitwrap_derive_extra"
version = "2.0.2"
authors = ["Cesbo Developers Team", "mengyou658"]
description = "macro for bitwrap"
documentation = "https://docs.rs/bitwrap_extra"
repository = "https://github.com/mengyou658/bitwrap"
edition = "2018"
keywords = ["bit", "parser", "parsing"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
